--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,34 @@ form {
   padding: 1rem;
 }
 
+ul {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 li {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
   list-style: none;
+  margin: 1rem;
+}
+
+.liContainer {
+  display: flex;
+  justify-content: space-evenly;
+  width: 15%;
+
+}
+
+li svg {
+  width: 1rem;
+  height: 1rem;
+}
+
+.fullStar {
+  display: none;
 }
