--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   height: 100%;
+  font-family: 'Sintony', sans-serif;
 }
 
 .wrapper {
@@ -33,10 +34,12 @@ html {
 }
 
   h1 {
-    width: 50%;
-    font-size: 3rem;
+    width: 100%;
+    margin: 1rem;
+    font-size: 5rem;
     text-align: center;
     color: black;
+    font-weight: 700;
   }
 
 form {
@@ -67,6 +70,8 @@ li {
 
 }
 
+
+
 li svg {
   width: 1rem;
   height: 1rem;
@@ -74,4 +79,31 @@ li svg {
 
 .fullStar {
   display: none;
+}
+
+.noStar {
+  display: none;
+}
+
+.disabled {
+  color: black;
+}
+
+select {
+  margin-right: 1rem;
+  background-color: #B3C1E3;
+  color: black;
+  border: 2px solid black;
+  border-radius: 50px;
+  padding: 0.25rem 1rem;
+  font-family: 'Sintony', sans-serif;
+  font-size: 1rem;
+}
+
+button {
+  font-size: 1rem;
+  font-family: 'Sintony', sans-serif;
+  padding: .25rem .5rem;
+  border: 2px solid black;
+  border-radius: 50px;
 }
